# ncrystal-geant4

./: README.md  pyproject.toml
.github/resources/: condancg4.yml
.github/workflows/: conda.yml  pypi.yml
devel/pypath/ncg4devel/: check_ruff.py  check_version.py  cli.py
example/: CMakeLists.txt  ncrystalgeant4_example.cc
example_bias/: CMakeLists.txt  ncrystalgeant4_biasexample.cc
src/ncrystal_geant4/cmake/: NCrystalGeant4Config.cmake
src/ncrystal_geant4/cmake/src/: G4NCManager.cc
